Posible solucion al ejercicio de password y percentiles

--- a/clases/DS fundamentals/Clase_1/ejercicios.ipynb
+++ b/clases/DS fundamentals/Clase_1/ejercicios.ipynb
@@ -32,17 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lo siento, no puedes entrar a la fiesta.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Pedir la edad al usuario\n",
     "edad = input(\"Por favor, introduce tu edad: \")\n",
@@ -92,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +147,7 @@
        "'hola, somos el mejor curso de Data Science de Coding Dojo'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,11 +181,69 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Solucion\n",
+    "1. Realizar un input para ingresar la contraseña y guardar en una variable\n",
+    "2. Generar una funcion para controlar las condiciones:\n",
+    "3. Utilizar una condicion para saber la cantidad de caracteres que tiene el input (si es menor a 8, Imprimir \"ingrese una contraseña con 8 caracteres como minimo\")\n",
+    "4. Utilizar una condicion para saber si dentro del input hay un numero (si no tiene ningun numero, imprimir \"Ingrese una contraseña con al menos 1 numero\" )\n",
+    "5. Utilizar una condicion para saber si el input contiene una letra mayuscula (si no tiene una letra mayuscula, imprimir \"Ingrese una Letra mayuscula en su contraseña)\n",
+    "6. Si cumple con todas las condiciones imprimir \"correcto\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingrese una letra mayúscula en su contraseña.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Función para verificar la contraseña\n",
+    "def verificar_contrasena(contrasena):\n",
+    "    # Verificar longitud mínima de 8 caracteres\n",
+    "    if len(contrasena) < 8:\n",
+    "        print(\"Ingrese una contraseña con 8 caracteres como mínimo.\")\n",
+    "        return False\n",
+    "    \n",
+    "    # Verificar que tenga al menos un número\n",
+    "    if not any(char.isdigit() for char in contrasena):\n",
+    "        print(\"Ingrese una contraseña con al menos 1 número.\")\n",
+    "        return False\n",
+    "    \n",
+    "    # Verificar que tenga al menos una letra mayúscula\n",
+    "    if not any(char.isupper() for char in contrasena):\n",
+    "        print(\"Ingrese una letra mayúscula en su contraseña.\")\n",
+    "        return False\n",
+    "    \n",
+    "    # Si cumple con todas las condiciones\n",
+    "    print(\"El registro fue exitoso.\")\n",
+    "    return True\n",
+    "\n",
+    "# Input de la contraseña\n",
+    "contrasena = input(\"Ingrese su contraseña: \")\n",
+    "\n",
+    "# Llamar a la función para verificar la contraseña\n",
+    "verificar_contrasena(contrasena)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +319,7 @@
        "       [17, 10]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,21 +330,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Operaciones básicas:\n",
-      "Suma total de las calificaciones: [59.  58.8 56.2]\n",
-      "Promedio de calificaciones por estudiante: [41.         66.66666667 90.66666667 76.         15.66666667]\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 3. Operaciones básicas\n",
     "print(\"Operaciones básicas:\")\n",
@@ -307,26 +345,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Multiplicación y división:\n",
-      "Calificaciones mejoradas (10%): \n",
-      "[[ 44.   60.5  30.8]\n",
-      " [ 74.8  57.2  88. ]\n",
-      " [101.2 104.5  93.5]\n",
-      " [ 82.5  82.5  85.8]\n",
-      " [ 22.   18.7  11. ]]\n",
-      "Calificaciones de Ciencias divididas por 2: [27.5 26.  47.5 37.5  8.5]\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 4. Multiplicación y división\n",
     "print(\"Multiplicación y división:\")\n",
@@ -341,25 +362,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Operaciones universales (ufuncs):\n",
-      "Raíz cuadrada de las calificaciones mejoradas: \n",
-      "[[ 6.63324958  7.77817459  5.54977477]\n",
-      " [ 8.64869932  7.56306816  9.38083152]\n",
-      " [10.05982107 10.22252415  9.6695398 ]\n",
-      " [ 9.08295106  9.08295106  9.26282894]\n",
-      " [ 4.69041576  4.32434966  3.31662479]]\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 5. Operaciones universales (ufuncs)\n",
     "print(\"Operaciones universales (ufuncs):\")\n",
@@ -370,20 +375,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Indexación y slicing:\n",
-      "Calificaciones en Matemáticas de todos los estudiantes: [40 68 92 75 20]\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 6. Indexación y slicing\n",
     "print(\"Indexación y slicing:\")\n",
@@ -394,21 +388,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Suma y producto:\n",
-      "Suma total de calificaciones por estudiante: [123 200 272 228  47]\n",
-      "Producto de calificaciones por estudiante: [ 61600 282880 742900 438750   3400]\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 7. Suma y producto\n",
     "print(\"Suma y producto:\")\n",
@@ -421,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +415,7 @@
       "Desviación estándar por materia: [25.72158627 26.00307674 30.98644865]\n",
       "Calificación mínima por materia: [20 17 10]\n",
       "Calificación máxima por materia: [92 95 85]\n",
-      "Calificación máxima por materia: [43.59590892 44.22291963 55.13602963]\n",
+      "Coeficiente de variacion: [43.59590892 44.22291963 55.13602963]\n",
       "\n",
       "\n"
      ]
@@ -451,24 +433,15 @@
     "print(f\"Desviación estándar por materia: {desviacion_estandar_materias}\")\n",
     "print(f\"Calificación mínima por materia: {minima_materias}\")\n",
     "print(f\"Calificación máxima por materia: {maximo_materias}\")\n",
-    "print(f\"Calificación máxima por materia: {coeficiente_variacion}\")\n",
+    "print(f\"Coeficiente de variacion: {coeficiente_variacion}\")\n",
     "print(\"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Agregaciones en arrays multidimensionales:\n",
-      "Suma total de calificaciones por materia: [295 294 281]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 9. Agregaciones en arrays multidimensionales\n",
     "print(\"Agregaciones en arrays multidimensionales:\")\n",
@@ -483,20 +456,54 @@
     "Calcular percentil 25, 50, 75 sobre el arreglo de calificaciones:\n",
     "\n",
     "1. Para cada estudiante\n",
-    "2. Para cada materia"
+    "2. Para cada materia`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentiles por estudiante (25, 50, 75):\n",
+      "Estudiante 1: Percentil 25 = 34.0, Percentil 50 = 40.0, Percentil 75 = 47.5\n",
+      "Estudiante 2: Percentil 25 = 60.0, Percentil 50 = 68.0, Percentil 75 = 74.0\n",
+      "Estudiante 3: Percentil 25 = 88.5, Percentil 50 = 92.0, Percentil 75 = 93.5\n",
+      "Estudiante 4: Percentil 25 = 75.0, Percentil 50 = 75.0, Percentil 75 = 76.5\n",
+      "Estudiante 5: Percentil 25 = 13.5, Percentil 50 = 17.0, Percentil 75 = 18.5\n",
+      "\n",
+      "Percentiles por materia (25, 50, 75):\n",
+      "Matemáticas: Percentil 25 = 40.0, Percentil 50 = 68.0, Percentil 75 = 75.0\n",
+      "Ciencias: Percentil 25 = 52.0, Percentil 50 = 55.0, Percentil 75 = 75.0\n",
+      "Lenguaje: Percentil 25 = 28.0, Percentil 50 = 78.0, Percentil 75 = 80.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# 1. Percentiles para cada estudiante (por filas)\n",
+    "percentiles_estudiantes = np.percentile(calificaciones, [25, 50, 75], axis=1)\n",
+    "\n",
+    "print(\"Percentiles por estudiante (25, 50, 75):\")\n",
+    "for i, percentiles in enumerate(percentiles_estudiantes.T, 1):\n",
+    "    print(f\"Estudiante {i}: Percentil 25 = {percentiles[0]}, Percentil 50 = {percentiles[1]}, Percentil 75 = {percentiles[2]}\")\n",
+    "\n",
+    "# 2. Percentiles para cada materia (por columnas)\n",
+    "percentiles_materias = np.percentile(calificaciones, [25, 50, 75], axis=0)\n",
+    "\n",
+    "print(\"\\nPercentiles por materia (25, 50, 75):\")\n",
+    "materias = [\"Matemáticas\", \"Ciencias\", \"Lenguaje\"]\n",
+    "for i, percentiles in enumerate(percentiles_materias.T):\n",
+    "    print(f\"{materias[i]}: Percentil 25 = {percentiles[0]}, Percentil 50 = {percentiles[1]}, Percentil 75 = {percentiles[2]}\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -510,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
