3ra version, uso de traspuesta de matriz

--- a/clases/DS fundamentals/Clase_1/ejercicios.ipynb
+++ b/clases/DS fundamentals/Clase_1/ejercicios.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -487,134 +487,119 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[40, 55, 28],\n",
-       "       [68, 52, 80],\n",
-       "       [92, 95, 85],\n",
-       "       [75, 75, 78],\n",
-       "       [20, 17, 10]])"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "#Verifico cual es la variable que contiene los datos y si esta esta correcta.\n",
-    "calificaciones"
+    "1 - mas simple"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El arreglo con los percentiles por alumno es: \n",
-      " [[34.  60.  88.5 75.  13.5]\n",
-      " [40.  68.  92.  75.  17. ]\n",
-      " [47.5 74.  93.5 76.5 18.5]]\n"
+      "La matriz con los percentiles por estudiante es: \n",
+      " [[34.  40.  47.5]\n",
+      " [60.  68.  74. ]\n",
+      " [88.5 92.  93.5]\n",
+      " [75.  75.  76.5]\n",
+      " [13.5 17.  18.5]]\n"
      ]
     }
    ],
    "source": [
     "percentiles = np.percentile(calificaciones, [25, 50, 75], axis=1)\n",
-    "print(\"El arreglo con los percentiles por alumno es: \\n\",percentiles)\n"
+    "print(\"La matriz con los percentiles por estudiante es: \\n\",percentiles.T) #Uso \\n para dar un salto de linea y la.T para transponer la matriz y que se vea mas lindo"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "o"
+    "1 - mas complejo, usando for para enumerar los nombres de los estudiantes y .T para transponer la matriz."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Percentil 25 por estudiante: [34.  60.  88.5 75.  13.5]\n",
-      "Percentil 50 por estudiante: [40. 68. 92. 75. 17.]\n",
-      "Percentil 75 por estudiante: [47.5 74.  93.5 76.5 18.5]\n"
+      "Estudiante 1: Percentiles 25, 50, 75 -> [34.  40.  47.5]\n",
+      "Estudiante 2: Percentiles 25, 50, 75 -> [60. 68. 74.]\n",
+      "Estudiante 3: Percentiles 25, 50, 75 -> [88.5 92.  93.5]\n",
+      "Estudiante 4: Percentiles 25, 50, 75 -> [75.  75.  76.5]\n",
+      "Estudiante 5: Percentiles 25, 50, 75 -> [13.5 17.  18.5]\n"
      ]
     }
    ],
    "source": [
-    "#Los percentiles por alumno se sacan usando el axis 1 que es la fila.\n",
-    "percentil_25_estudiantes = np.percentile(calificaciones, 25, axis=1)\n",
-    "print(f\"Percentil 25 por estudiante: {percentil_25_estudiantes}\")\n",
-    "percentil_50_estudiantes = np.percentile(calificaciones, 50, axis=1)\n",
-    "print(f\"Percentil 50 por estudiante: {percentil_50_estudiantes}\")\n",
-    "percentil_75_estudiantes = np.percentile(calificaciones, 75, axis=1)\n",
-    "print(f\"Percentil 75 por estudiante: {percentil_75_estudiantes}\")"
+    "percentiles = np.percentile(calificaciones, [25, 50, 75], axis=1)\n",
+    "for i, estudiante_percentiles in enumerate(percentiles.T, start=1):  # `.T` es para transponer y asociar a cada estudiante\n",
+    "    print(f\"Estudiante {i}: Percentiles 25, 50, 75 -> {estudiante_percentiles}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2 - mas simple"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El arreglo con los percentiles por alumno es: \n",
-      " [[40. 52. 28.]\n",
-      " [68. 55. 78.]\n",
-      " [75. 75. 80.]]\n"
+      "La matriz con los percentiles por materia es: \n",
+      " [[40. 68. 75.]\n",
+      " [52. 55. 75.]\n",
+      " [28. 78. 80.]]\n"
      ]
     }
    ],
    "source": [
     "percentiles = np.percentile(calificaciones, [25, 50, 75], axis=0)\n",
-    "print(\"El arreglo con los percentiles por alumno es: \\n\",percentiles)"
+    "print(\"La matriz con los percentiles por materia es: \\n\",percentiles.T) # `.T` es para transponer y asociar a cada materia"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "o"
+    "2 - mas complejo, uso de for y .T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Percentil 25 por materia: [40. 52. 28.]\n",
-      "Percentil 50 por materia: [68. 55. 78.]\n",
-      "Percentil 75 por materia: [75. 75. 80.]\n"
+      "Materia 1: Percentiles 25, 50, 75 -> [40. 68. 75.]\n",
+      "Materia 2: Percentiles 25, 50, 75 -> [52. 55. 75.]\n",
+      "Materia 3: Percentiles 25, 50, 75 -> [28. 78. 80.]\n"
      ]
     }
    ],
    "source": [
-    "#Los percentiles por materia se sacan usando el axis 0 que es la columna.\n",
-    "percentil_25_materias = np.percentile(calificaciones, 25, axis=0)\n",
-    "print(f\"Percentil 25 por materia: {percentil_25_materias}\")\n",
-    "percentil_50_materias = np.percentile(calificaciones, 50, axis=0)\n",
-    "print(f\"Percentil 50 por materia: {percentil_50_materias}\")\n",
-    "percentil_75_materias = np.percentile(calificaciones, 75, axis=0)\n",
-    "print(f\"Percentil 75 por materia: {percentil_75_materias}\")"
+    "percentiles = np.percentile(calificaciones, [25, 50, 75], axis=0)\n",
+    "for i, materia_percentiles in enumerate(percentiles.T, start=1):  # `.T` es para transponer y asociar a cada materia\n",
+    "    print(f\"Materia {i}: Percentiles 25, 50, 75 -> {materia_percentiles}\")"
    ]
   }
  ],
