--- a/clases/DS fundamentals/Clase_1/ejercicios.ipynb
+++ b/clases/DS fundamentals/Clase_1/ejercicios.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "'hola, somos el mejor curso de Data Science de Coding Dojo'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -483,20 +483,65 @@
     "Calcular percentil 25, 50, 75 sobre el arreglo de calificaciones:\n",
     "\n",
     "1. Para cada estudiante\n",
-    "2. Para cada materia"
+    "- Usar numpy percentiles para calcular los valores por estudiante\n",
+    "2. Para cada materia\n",
+    "- Usar numpy percentiles para calcular los valores por materia\n",
+    "\n",
+    "Adicional: Usar print para organizar los datos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Perctiles por cada estudiante:\n",
+      "Percentil 25: [34.  60.  88.5 75.  13.5]\n",
+      "Percentil 50 (media): [40. 68. 92. 75. 17.]\n",
+      "Percentil 75: [47.5 74.  93.5 76.5 18.5]\n",
+      "------------------------------------\n",
+      "Percentiles por materia\n",
+      "Percentil 25: [40. 52. 28.]\n",
+      "Percentil 50 (media): [68. 55. 78.]\n",
+      "Percentil 75: [75. 75. 80.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# Percentiles por estudiantes (columns, hence axis 1)\n",
+    "percentiles_estudiantes = np.percentile(calificaciones, [25, 50, 75], axis=1)\n",
+    "\n",
+    "# Percentiles por materia (rows, hence axis 0)\n",
+    "percentiles_materias = np.percentile(calificaciones, [25, 50, 75], axis=0)\n",
+    "\n",
+    "percentiles_estudiantes, percentiles_materias\n",
+    "\n",
+    "print ('Perctiles por cada estudiante:')\n",
+    "print ('Percentil 25:',percentiles_estudiantes[0])\n",
+    "print ('Percentil 50 (media):',percentiles_estudiantes[1])\n",
+    "print ('Percentil 75:',percentiles_estudiantes[2])\n",
+    "print (\"------------------------------------\")\n",
+    "print ('Percentiles por materia')\n",
+    "print ('Percentil 25:',percentiles_materias[0])\n",
+    "print ('Percentil 50 (media):',percentiles_materias[1])\n",
+    "print ('Percentil 75:',percentiles_materias[2])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -510,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
