adjunto tarea de contrasenas

--- a/clases/DS fundamentals/Clase_1/ejercicios.ipynb
+++ b/clases/DS fundamentals/Clase_1/ejercicios.ipynb
@@ -189,11 +189,49 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Pasos a seguir\n",
+    "\n",
+    "\n",
+    "* crear una variable que le pida al usuario ingresar algo.\n",
+    "* crear condicionales para verificar que el valor ingresado por el usuario cumpla con los criterios.\n",
+    "* hacerlo lo mas simple posible."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Registro exitoso.\n"
+     ]
+    }
+   ],
+   "source": [
+    "contrasena = input(\"Introduce tu contraseña: \") #esta es la variable que pide ingresar algo\n",
+    "\n",
+    "# crear condicionales que permitan, 1. Verificar si la longitud es suficiente\n",
+    "if len(contrasena) < 8:\n",
+    "    print(\"La contraseña debe tener al menos 8 caracteres.\")\n",
+    "\n",
+    "#2. Verificar si contiene al menos una letra mayúscula\n",
+    "elif contrasena == contrasena.lower():\n",
+    "    print(\"La contraseña debe contener al menos una letra mayúscula.\")\n",
+    "\n",
+    "#3. Verificar si contiene al menos un número\n",
+    "elif not any(char.isdigit() for char in contrasena):\n",
+    "    print(\"La contraseña debe contener al menos un número.\")\n",
+    "\n",
+    "#4. Si cumple todos los requisitos ya termino\n",
+    "else:\n",
+    "    print(\"Registro exitoso.\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
