Ejercicio de alumnos

--- a/clases/DS fundamentals/Clase_1/notebooks/ejercicios.ipynb
+++ b/clases/DS fundamentals/Clase_1/notebooks/ejercicios.ipynb
@@ -488,15 +488,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentiles por estudiante:\n",
+      "Estudiante 1: Percentil 25 = 34.0, Percentil 50 = 40.0, Percentil 75 = 47.5\n",
+      "Estudiante 2: Percentil 25 = 60.0, Percentil 50 = 68.0, Percentil 75 = 74.0\n",
+      "Estudiante 3: Percentil 25 = 88.5, Percentil 50 = 92.0, Percentil 75 = 93.5\n",
+      "Estudiante 4: Percentil 25 = 75.0, Percentil 50 = 75.0, Percentil 75 = 76.5\n",
+      "Estudiante 5: Percentil 25 = 13.5, Percentil 50 = 17.0, Percentil 75 = 18.5\n",
+      "\n",
+      "Percentiles por materia:\n",
+      "Matemáticas: Percentil 25 = 40.0, Percentil 50 = 68.0, Percentil 75 = 75.0\n",
+      "Ciencias: Percentil 25 = 52.0, Percentil 50 = 55.0, Percentil 75 = 75.0\n",
+      "Lenguaje: Percentil 25 = 28.0, Percentil 50 = 78.0, Percentil 75 = 80.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# 1. Creación del array bidimensional con las calificaciones de los estudiantes\n",
+    "calificaciones = np.array([\n",
+    "    [40, 55, 28],  # Estudiante 1: Matemáticas, Ciencias, Lenguaje\n",
+    "    [68, 52, 80],  # Estudiante 2\n",
+    "    [92, 95, 85],  # Estudiante 3\n",
+    "    [75, 75, 78],  # Estudiante 4\n",
+    "    [20, 17, 10],  # Estudiante 5\n",
+    "])\n",
+    "\n",
+    "# 2. Calcular los percentiles 25, 50 y 75 para cada estudiante\n",
+    "print(\"Percentiles por estudiante:\")\n",
+    "for i, estudiante in enumerate(calificaciones):\n",
+    "    p25 = np.percentile(estudiante, 25)\n",
+    "    p50 = np.percentile(estudiante, 50)\n",
+    "    p75 = np.percentile(estudiante, 75)\n",
+    "    print(f\"Estudiante {i+1}: Percentil 25 = {p25}, Percentil 50 = {p50}, Percentil 75 = {p75}\")\n",
+    "\n",
+    "# 3. Calcular los percentiles 25, 50 y 75 para cada materia (columna)\n",
+    "print(\"\\nPercentiles por materia:\")\n",
+    "materias = ['Matemáticas', 'Ciencias', 'Lenguaje']\n",
+    "for i in range(calificaciones.shape[1]):  # Iterar sobre las columnas (materias)\n",
+    "    materia = calificaciones[:, i]  # Seleccionar los datos de la materia\n",
+    "    p25 = np.percentile(materia, 25)\n",
+    "    p50 = np.percentile(materia, 50)\n",
+    "    p75 = np.percentile(materia, 75)\n",
+    "    print(f\"{materias[i]}: Percentil 25 = {p25}, Percentil 50 = {p50}, Percentil 75 = {p75}\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -510,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
