--- a/clases/DS fundamentals/semana_1/ejercicios.ipynb
+++ b/clases/DS fundamentals/semana_1/ejercicios.ipynb
@@ -189,49 +189,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pasos a seguir\n",
-    "\n",
-    "\n",
-    "* crear una variable que le pida al usuario ingresar algo.\n",
-    "* crear condicionales para verificar que el valor ingresado por el usuario cumpla con los criterios.\n",
-    "* hacerlo lo mas simple posible."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Registro exitoso.\n"
-     ]
-    }
-   ],
-   "source": [
-    "contrasena = input(\"Introduce tu contraseña: \") #esta es la variable que pide ingresar algo\n",
-    "\n",
-    "# crear condicionales que permitan, 1. Verificar si la longitud es suficiente\n",
-    "if len(contrasena) < 8:\n",
-    "    print(\"La contraseña debe tener al menos 8 caracteres.\")\n",
-    "\n",
-    "#2. Verificar si contiene al menos una letra mayúscula\n",
-    "elif contrasena == contrasena.lower():\n",
-    "    print(\"La contraseña debe contener al menos una letra mayúscula.\")\n",
-    "\n",
-    "#3. Verificar si contiene al menos un número\n",
-    "elif not any(char.isdigit() for char in contrasena):\n",
-    "    print(\"La contraseña debe contener al menos un número.\")\n",
-    "\n",
-    "#4. Si cumple todos los requisitos ya termino\n",
-    "else:\n",
-    "    print(\"Registro exitoso.\")\n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -256,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -525,125 +487,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1 - mas simple"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "La matriz con los percentiles por estudiante es: \n",
-      " [[34.  40.  47.5]\n",
-      " [60.  68.  74. ]\n",
-      " [88.5 92.  93.5]\n",
-      " [75.  75.  76.5]\n",
-      " [13.5 17.  18.5]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "percentiles = np.percentile(calificaciones, [25, 50, 75], axis=1)\n",
-    "print(\"La matriz con los percentiles por estudiante es: \\n\",percentiles.T) #Uso \\n para dar un salto de linea y la.T para transponer la matriz y que se vea mas lindo"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1 - mas complejo, usando for para enumerar los nombres de los estudiantes y .T para transponer la matriz."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Estudiante 1: Percentiles 25, 50, 75 -> [34.  40.  47.5]\n",
-      "Estudiante 2: Percentiles 25, 50, 75 -> [60. 68. 74.]\n",
-      "Estudiante 3: Percentiles 25, 50, 75 -> [88.5 92.  93.5]\n",
-      "Estudiante 4: Percentiles 25, 50, 75 -> [75.  75.  76.5]\n",
-      "Estudiante 5: Percentiles 25, 50, 75 -> [13.5 17.  18.5]\n"
-     ]
-    }
-   ],
-   "source": [
-    "percentiles = np.percentile(calificaciones, [25, 50, 75], axis=1)\n",
-    "for i, estudiante_percentiles in enumerate(percentiles.T, start=1):  # `.T` es para transponer y asociar a cada estudiante\n",
-    "    print(f\"Estudiante {i}: Percentiles 25, 50, 75 -> {estudiante_percentiles}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2 - mas simple"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "La matriz con los percentiles por materia es: \n",
-      " [[40. 68. 75.]\n",
-      " [52. 55. 75.]\n",
-      " [28. 78. 80.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "percentiles = np.percentile(calificaciones, [25, 50, 75], axis=0)\n",
-    "print(\"La matriz con los percentiles por materia es: \\n\",percentiles.T) # `.T` es para transponer y asociar a cada materia"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2 - mas complejo, uso de for y .T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Materia 1: Percentiles 25, 50, 75 -> [40. 68. 75.]\n",
-      "Materia 2: Percentiles 25, 50, 75 -> [52. 55. 75.]\n",
-      "Materia 3: Percentiles 25, 50, 75 -> [28. 78. 80.]\n"
-     ]
-    }
-   ],
-   "source": [
-    "percentiles = np.percentile(calificaciones, [25, 50, 75], axis=0)\n",
-    "for i, materia_percentiles in enumerate(percentiles.T, start=1):  # `.T` es para transponer y asociar a cada materia\n",
-    "    print(f\"Materia {i}: Percentiles 25, 50, 75 -> {materia_percentiles}\")"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -657,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
