Resolucion de ejercicio de contraseña y percentiles

--- a/clases/DS fundamentals/Clase_1/ejercicios.ipynb
+++ b/clases/DS fundamentals/Clase_1/ejercicios.ipynb
@@ -189,11 +189,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Logica:\n",
+    "1. Crear una funcion que puedo, contacar la cantidad de valores de la cadeba (la contraseña). Donde pueda distingir si la cadena tienes menos de 8 caracteres, \n",
+    "2. La funcion tiene que diferenciar letras mayuscula y si al menos uno de los caracteres es un numero/digito.\n",
+    "3. No hay restriccion sobre numero consecutivos\n",
+    "4. Imprimer los mensajes al terminar la examinacion para los casos en que la contraseña cumpla o no cumpla la condicion."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Registro exitoso\n"
+     ]
+    }
+   ],
+   "source": [
+    "def registrar_contraseña():\n",
+    "    while True:\n",
+    "        contraseña = input(\"Ingresar contraseña: \")\n",
+    "        \n",
+    "        # Aqui verificamos si la contraseña cumple con los requistos\n",
+    "        if (len(contraseña) < 8 or \n",
+    "            not any(caracter.isupper() for caracter in contraseña) or \n",
+    "            not any(caracter.isdigit() for caracter in contraseña)):\n",
+    "            \n",
+    "            print(\"Los criterios para la contraseña no se cumplen. Debe tener al menos 8 caracteres,contener al menos una letra mayúscula y al menos un número.\")\n",
+    "            print(\"Por favor, inténtelo de nuevo.\")\n",
+    "            continue\n",
+    "        \n",
+    "        # Si la contraseña cumple todos los requisitos\n",
+    "        print(\"Registro exitoso\")\n",
+    "        break\n",
+    "\n",
+    "# Aqui llamamos a la funcion. \n",
+    "registrar_contraseña()\n"
+   ]
   },
   {
    "cell_type": "markdown",
