--- a/clases/DS fundamentals/semana_2/pandas_vs_numpy.ipynb
+++ b/clases/DS fundamentals/semana_2/pandas_vs_numpy.ipynb
@@ -1022,7 +1022,37 @@
     "Preguntas a contestar:\n",
     "\n",
     "    1. ¿Qué es la correlación?\n",
-    "    2. ¿Por qué la correlación es 2.6 veces más lenta de calcular en Pandas que en Numpy?"
+    "        Es una medida estadística que indica el grado de relación entre dos variables. Es una forma de verificar si\n",
+    "        dos variables tienden a cambiar juntas de una manera PREDECIBLE.\n",
+    "        Tipos de Correlación\n",
+    "        Positiva: Ambas variables aumentan. Esto es PREDECIBLE\n",
+    "        Negativa: Cuando una aumente la otra disminuye. Esto es PREDECIBLE\n",
+    "        Nula: No hay relación PREDECIBLE entre las variables.\n",
+    "\n",
+    "        Coeficiente: Varia entre -1 y 1.\n",
+    "        +1: Correlación positiva perfecta. Ambas variables se mueven JUNTAS en la misma dirección de manera perfecta. Es proporcional o relacion lineal.\n",
+    "         0: No hay correlación.\n",
+    "        -1: Correlación negativa perfecta. Las dos variables se mueven en direcciones opuestas de manera perfecta. Es proporcional o relacion lineal.\n",
+    "\n",
+    "        Las correlaciones NO IMPLICAN CAUSALIDAD.\n",
+    "\n",
+    "        \n",
+    "\n",
+    "    2. ¿Por qué la correlación es 2.6 veces más lenta de calcular en Pandas que en Numpy?\n",
+    "        La correlacion se basa en datos NUMERICOS.\n",
+    "        numpy maneja arrays, y los arrays solo manejan un tipo de dato: Numeros.\n",
+    "        panda maneja dataframes que tienen diferentes tipos de datos, basicamente etiquetas no numericas.\n",
+    "        panda tiene una sobrecarga adicional al manejar / convertir las estructuras para realizar los calculos.\n",
+    "        Esta sobrecarga es la que produce el retraso.\n",
+    "\n",
+    "    Tipo de Correlación en Desempeño\n",
+    "        * Correlación Positiva:\n",
+    "            En términos de rendimiento, la correlación entre el tamaño del dataset y el tiempo de cálculo es positiva para ambos NumPy y Pandas, lo que significa que a medida que aumenta el tamaño del dataset, el tiempo de cálculo también tiende a aumentar.\n",
+    "            Sin embargo, la pendiente de esta relación (es decir, el cambio en el tiempo de cálculo con respecto al aumento en el tamaño del dataset) es más pronunciada para Pandas debido a su sobrecarga.\n",
+    "        * Correlación Negativa:\n",
+    "            En el contexto de rendimiento, podríamos considerar la correlación negativa entre la eficiencia (velocidad de cálculo) y la complejidad de los datos en Pandas. Es decir, a medida que la complejidad (por ejemplo, mezcla de tipos de datos, uso de índices) aumenta, la eficiencia de cálculo tiende a disminuir en Pandas.\n",
+    "            En contraste, NumPy mantiene su eficiencia en la mayoría de los casos debido a su enfoque simplificado en datos homogéneos.\n",
+    "    Pregunta: Hay casos donde se puedan convertir los dataframes en arrays para mejorar los tiempos? Hay librerias que lo hacen?\n"
    ]
   }
  ],
