calculo de percentiles utlizando numpy

--- a/clases/DS fundamentals/Clase_1/notebooks/ejercicios.ipynb
+++ b/clases/DS fundamentals/Clase_1/notebooks/ejercicios.ipynb
@@ -125,7 +125,7 @@
     "    # Encontrar el punto o la palabra \"Dojo\"\n",
     "    indice_punto = frase.find(\".\")\n",
     "    indice_dojo = frase.find(\"Dojo\")\n",
-    "    \n",
+    "\n",
     "    # Determinar cuál índice usar\n",
     "    if indice_dojo != -1:\n",
     "        return frase[:indice_dojo + len(\"Dojo\")].strip()\n",
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
     "# 4. Multiplicación y división\n",
     "print(\"Multiplicación y división:\")\n",
     "mejora_10_por_ciento = calificaciones * 1.1  # Mejora del 10% en todas las calificaciones\n",
-    "#mejora_10_por_ciento_alumno_1 = calificaciones[0,0:] * 1.1 \n",
+    "#mejora_10_por_ciento_alumno_1 = calificaciones[0,0:] * 1.1\n",
     "calificaciones_ciencias_mitad = calificaciones[:, 1] / 2  # División de Ciencias por 2\n",
     "#calificaciones_ciencias_mitad = calificaciones[:, 1:3] / 2  # División de Ciencias y lenguaje por 2\n",
     "print(f\"Calificaciones mejoradas (10%): \\n{mejora_10_por_ciento}\")\n",
@@ -487,16 +487,68 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Calcular percentiles para cada estudiante"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentiles para cada estudiante (25, 50, 75):\n",
+      "[[34.  60.  88.5 75.  13.5]\n",
+      " [40.  68.  92.  75.  17. ]\n",
+      " [47.5 74.  93.5 76.5 18.5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "percentil_estudiantes = np.percentile(calificaciones, [25, 50, 75], axis=1)\n",
+    "print(\"Percentiles para cada estudiante (25, 50, 75):\")\n",
+    "print(percentil_estudiantes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calcular percentiles para cada materia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Percentiles para cada materia (25, 50, 75):\n",
+      "[[40. 52. 28.]\n",
+      " [68. 55. 78.]\n",
+      " [75. 75. 80.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "percentil_materias = np.percentile(calificaciones, [25, 50, 75], axis=0)\n",
+    "print(\"\\nPercentiles para cada materia (25, 50, 75):\")\n",
+    "print(percentil_materias)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -510,7 +562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
