Guardar cambios en pandas_vs_numpy.ipynb antes de cambiar de rama

--- a/clases/DS fundamentals/semana_2/pandas_vs_numpy.ipynb
+++ b/clases/DS fundamentals/semana_2/pandas_vs_numpy.ipynb
@@ -1021,8 +1021,16 @@
    "source": [
     "Preguntas a contestar:\n",
     "\n",
-    "    1. ¿Qué es la correlación?\n",
-    "    2. ¿Por qué la correlación es 2.6 veces más lenta de calcular en Pandas que en Numpy?"
+    "1. ¿Qué es la correlación?\n",
+    "\n",
+    "Es una medida estadística que indica la relación y la dirección de la asociación entre dos variables. \n",
+    "* Correlación positiva: Cuando una variable aumenta, la otra también tiende a aumentar. \n",
+    "* Correlación negativa: Cuando una variable aumenta, la otra tiende a disminuir. \n",
+    "* Correlación cero: No hay relación aparente entre las variables.\n",
+    "\n",
+    "2. ¿Por qué la correlación es 2.6 veces más lenta de calcular en Pandas que en Numpy?\n",
+    "\n",
+    "Numpy trabaja con arrays, no necesita cargar etiquetas, es mas directo a la hora de hacer operaciones matematicas, pandas procesa las etiquetas, columnas y filas, eso lo hace mas lento."
    ]
   }
  ],
