ejercicio_integracion_bernardo_sosa v2

--- a/clases/ds-fundamentals/ejercicios de integración/ejercicio_integracion_2.ipynb
+++ b/clases/ds-fundamentals/ejercicios de integración/ejercicio_integracion_2.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,8 @@
       "El participante con menos intentos es: Participante_D con 2 intentos.\n",
       "El participante con más intentos es: Participante_E con 6 intentos.\n",
       "El participante con más tiempo total en horas es: Participante_E con 14.0 horas.\n",
-      "Resultado total de puntos por participante: [{'participante': 'Participante_A', 'total_puntos': 343}, {'participante': 'Participante_B', 'total_puntos': 145}, {'participante': 'Participante_C', 'total_puntos': 363}, {'participante': 'Participante_D', 'total_puntos': 60}, {'participante': 'Participante_E', 'total_puntos': 325}]\n"
+      "Resultado total de puntos por participante:\n",
+      "[{'participante': 'Participante_A', 'total_puntos': 343}, {'participante': 'Participante_B', 'total_puntos': 145}, {'participante': 'Participante_C', 'total_puntos': 363}, {'participante': 'Participante_D', 'total_puntos': 60}, {'participante': 'Participante_E', 'total_puntos': 325}]\n"
      ]
     }
    ],
