agregando notas internas para repasar

--- a/clases/ds-fundamentals/ejercicios de integración/ejercicio_integracion_1.ipynb
+++ b/clases/ds-fundamentals/ejercicios de integración/ejercicio_integracion_1.ipynb
@@ -140,6 +140,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f13e88df",
+   "metadata": {},
+   "source": [
+    "Aqui hubo un warning que no logre comprender entre versiones de pandas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "e68a1cc1",
