visualización de ventas total

--- a/clases/ds-fundamentals/ejercicios de integración/ejercicio_integracion_1.ipynb
+++ b/clases/ds-fundamentals/ejercicios de integración/ejercicio_integracion_1.ipynb
@@ -268,11 +268,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "producto\n",
+       "Producto_A    133.0\n",
+       "Producto_B    144.0\n",
+       "Producto_C    146.0\n",
+       "Producto_D    384.0\n",
+       "Name: total, dtype: float64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Verificar "
+    "# Analizar cantidad de ventas total por producto\n",
+    "df.groupby(\"producto\")[\"total\"].sum()"
    ]
   }
  ],
