--- a/clases/ds-fundamentals/ejercicios de integración/ejercicio_integracion_1.ipynb
+++ b/clases/ds-fundamentals/ejercicios de integración/ejercicio_integracion_1.ipynb
@@ -213,7 +213,9 @@
    "cell_type": "markdown",
    "id": "4c1374ba",
    "metadata": {},
-   "source": []
+   "source": [
+    "Probando output de json con datos limpios revisar despues si es correcto"
+   ]
   },
   {
    "cell_type": "code",
