verificar valores nulos

--- a/clases/ds-fundamentals/ejercicios de integración/ejercicio_integracion_1.ipynb
+++ b/clases/ds-fundamentals/ejercicios de integración/ejercicio_integracion_1.ipynb
@@ -54,6 +54,95 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datos sin NAs en q</th>\n",
+       "      <th>Na en q</th>\n",
+       "      <th>Na en %</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>total</th>\n",
+       "      <td>12</td>\n",
+       "      <td>8</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cantidad</th>\n",
+       "      <td>16</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>precio_unitario</th>\n",
+       "      <td>16</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fecha</th>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>producto</th>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 datos sin NAs en q  Na en q  Na en %\n",
+       "total                            12        8     40.0\n",
+       "cantidad                         16        4     20.0\n",
+       "precio_unitario                  16        4     20.0\n",
+       "fecha                            20        0      0.0\n",
+       "producto                         20        0      0.0"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qsna=df.shape[0]-df.isnull().sum(axis=0)\n",
+    "qna=df.isnull().sum(axis=0)\n",
+    "ppna=round(100*(df.isnull().sum(axis=0)/df.shape[0]),2)\n",
+    "aux= {'datos sin NAs en q': qsna, 'Na en q': qna ,'Na en %': ppna}\n",
+    "na=pd.DataFrame(data=aux)\n",
+    "na.sort_values(by='Na en %',ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
